tdf#119316 sfx2 store: no move on macOS

osl::FileStatus::getAttributes() and osl::File::setAttributes() doesn't
preserve all the necessary file properties (at least "Hide extension" is not
handled), so always copy on macOS instead.

Change-Id: I529467cc3d432d04e593f936c13ed4656a18150c